@@ -3,7 +3,7 @@ package foundation.identity.did;
 import org.junit.jupiter.api.Test;
 
 import java.net.URI;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -34,7 +34,7 @@ public class VerificationMethodTest {
 
 		return VerificationMethod.builder()
 				.id(URI.create("did:ex:123#key-1"))
-				.types(Arrays.asList("Ed25519VerificationKey2018"))
+				.types(List.of("Ed25519VerificationKey2018"))
 				.publicKeyBase58("000000000")
 				.build();
 	}
